<resources>
    <string name="app_name">AppFoody_Firebase</string>
    <string name="phienban">Phiên bản</string>
    <string name="dangtai">Đang tải...</string>
    <string name="tencongty">HuynhVinh</string>
    <string name="Email">Email</string>
    <string name="MatKhau">Mật khẩu</string>
    <string name="DangNhap">Đăng nhập</string>
    <string name="hoac"> Hoặc </string>
    <string name="Facebook_app_id">531578420646293</string>
    <string name="fb_login_protocol_scheme">fb531578420646293</string>
    <string name="DangNhapBangGoogle">Đăng nhập bằng google</string>
    <string name="DangNhapBangFacebook">Đăng nhập bằng facebook</string>
    <string name="QuenMatKhau">Quên mật khẩu ?</string>
    <string name="DangKyMoi"><u>Đăng ký mới</u></string>
    <string name="NhapLaiMatKhau">Nhập lại mật khẩu</string>
    <string name="DangKy">Đăng ký</string>
    <string name="ThongBaoLoiDangKy">Bạn chưa nhập </string>
    <string name="ThongBaoLoiNhapLaiMatKhau">Mật khẩu bạn nhập lại chưa đúng</string>
    <string name="DangKyThanhCong">Đăng ký thành công</string>
    <string name="DangXuLy">Đang xử lý</string>
    <string name="KiemTraDangNhap">Vui lòng kiểm tra tài khoản</string>
    <string name="KhoiPhucMatKhau">Khôi phục mật khẩu</string>
    <string name="ChuoiKhoiPhucMatKhau">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !</string>
    <string name="GuiMail">Gửi Email</string>
    <string name="chuoithanhvien">Bạn không phải là thành viên ?</string>
    <string name="ThongBaoEmailKhongHopLe">Email không hợp lệ</string>
    <string name="ThongBaoGuiMailThanhCong">Đã gửi Email thành công</string>
    <string name="odau">Ở đâu ?</string>
    <string name="AnGi">Ăn gì ?</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">Khu vực</string>
    <string name="GanToi">Gần tôi</string>
    <string name="GiaoHang">Giao hàng</string>
    <string name="gameandfun">Game and Fun</string>
    <string name="DanhGia">Đánh giá</string>
    <string name="Blogs">Blogs</string>
    <string name="TopMember">Top thành viên</string>
    <string name="DatMon">Đặt món</string>
    <string name="BinhLuan">Bình luận</string>
    <string name="LuuLai">Lưu lại</string>
    <string name="TaiAnh">Tải ảnh</string>
    <string name="CheckIn">Check-in</string>
    <string name="ChiaSe">Chia sẻ</string>
    <string name="DangMoCua">Đang mở cửa</string>
    <string name="DongCua">Đóng cửa</string>
    <string name="dang">Đăng</string>
    <string name="tieude">Tiêu đề </string>
    <string name="TenQuanAn">Tên quán ăn</string>
    <string name="GiaToiDa">Giá tối đa</string>
    <string name="GiaToiThieu">Giá tối thiểu</string>
    <string name="KhongGiaoHang">Không giao hàng</string>
    <string name="GioMoCua">Giờ mở cửa</string>
    <string name="GioDongCua">Giờ đóng cửa</string>
    <string name="ChiNhanh">Chi nhánh</string>
    <string name="TenMon">Tên Món</string>
    <string name="GiaTien">Giá tiền</string>
    <string name="LuuQuanAn">Lưu quán ăn</string>
    <string name="ThemThucDon">Thêm thực đơn</string>
    <string name="XoaThucDon">Xóa thực đơn</string>
    <string name="KiemTraThemChiNhanh">Bạn vui lòng không được để rỗng tên chi nhánh</string>
    <string name="KiemTraThemQuanAn">Vui lòng nhập đầy đủ thông tin quán ăn</string>
    <string name="ThucDon">Thực đơn</string>
    <string name="KiemTraThucDon">Vui lòng kiểm nhập đầy đủ thông tin thực đơn</string>
    <string name="GiaQuanAn">Giá quán ăn</string>
    <string name="XemMonAnDaDat">Xem món đã đặt</string>
    <string name="DanhSachMonAnDaDat">Danh sách món ăn đã đặt</string>
    <string name="XacNhanDatMon">Xác nhận đặt món</string>
    <string name="ThemQuanAn">Thêm Quán Ăn</string>
    <string name="DatMonThanhCong">Đặt món thành công</string>
    <string name="TongTien">Tổng tiền: </string>
    <string name="KiemTraGiaoHang">Xin lỗi quý khách! Quán hiện không nhận giao hàng</string>
    <string name="BinhLuanDaDuocDang">Bình luận đã được đăng</string>
    <string name="TimKiem">Tìm kiếm, Nhập khoảng cách</string>
    <string name="KiemTraTimKiem">Bạn vui lòng nhập khoảng cách</string>
</resources>
