<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="150dp"
        android:background="@color/transparentBackgroundDangNhap"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/KhoiPhucMatKhau"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="30sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChuoiKhoiPhucMatKhau"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/edEmailKP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            />
        <Button
            android:id="@+id/btnGuiMailKhoiPhuc"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/GuiMail"
            android:textAllCaps="false"
            android:background="@drawable/radius_button"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:textColor="@color/colorWhite"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chuoithanhvien"
                android:textColor="@color/colorWhite"
                />
            <TextView
                android:id="@+id/txtDangKyKhoiPhuc"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DangKyMoi"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>