<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="50dp"
        android:background="@color/transparentBackgroundDangNhap"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/foodytext"
            />
        <EditText
            android:id="@+id/edEmailDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edPasswordDN"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/MatKhau"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorWhite"
            />

        <Button
           android:id="@+id/btnDangNhap"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/DangNhap"
            android:textAllCaps="false"
            android:background="@drawable/radius_button"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:textColor="@color/colorWhite"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            >

            <View
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorWhite"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoac"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                />
            <View
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorWhite"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnDangNhapFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DangNhapBangFacebook"
            android:textAllCaps="false"
            android:background="@color/colorFacebook"
            android:drawableLeft="@drawable/icon_facebook"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:id="@+id/btnDangNhapGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/icon_google"
            android:drawablePadding="10dp"
            android:text="@string/DangNhapBangGoogle"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"

            >
            <TextView
                android:id="@+id/txtQuenMatKhau"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QuenMatKhau"
                android:textColor="@color/colorWhite"
                />
            <TextView
                android:id="@+id/txtDangKyMoi"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DangKyMoi"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>