<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgChupHinh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/img_themhinhanh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edTenMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TenMon"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:hint="@string/GiaTien"
                    android:id="@+id/edGiaTien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    />

                <Spinner
                    android:id="@+id/spinerThucDon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnThemThucDon"
            android:textAllCaps="false"
            android:text="@string/ThemThucDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnXoaThucDon"
            android:textAllCaps="false"
            android:text="@string/XoaThucDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </FrameLayout>

</LinearLayout>



